fix: dark mode style issue

--- a/packages/frontend/style.css
+++ b/packages/frontend/style.css
@@ -47,7 +47,7 @@
   --foreground: oklch(0.925 0 0);
   --card: oklch(0.226 0 0);
   --card-foreground: oklch(0.925 0 0);
-  --popover: oklch(0.226 0 0);
+  --popover: oklch(0.218 0 0);
   --popover-foreground: oklch(0.925 0 0);
   --primary: oklch(0.773 0 0);
   --primary-foreground: oklch(0.218 0 0);
